tests/ui/rfcs/rfc-2396-target_feature-11/safe-calls.mir.stderr
error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:23:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:26:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:29:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:36:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:39:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:46:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:49:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:52:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:60:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error[E0133]: call to function with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:65:18
   |
LL | const name: () = sse2();
   |                  ^^^^^^ call to function with `#[target_feature]`
   |
   = note: can only be called if the required target features are available

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0133`.
